# work_tools

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/mediatool/: __main__.py
src/mediatool/image/: ops.py
src/mediatool/image/pipelines/: blur_master.py  blur_script_interactive.py  convert_webp.py  dedupe.py
src/mediatool/ui/: __init__.py  app.py
src/mediatool/utils/: config.py  logging.py
src/mediatool/video/: ops.py
src/mediatool/video/pipelines/: extract_frames.py  transcode_ffmpeg.py
