[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediatool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "pillow>=10.0.0",
  "python-dotenv>=1.0.1",
  "ffmpeg-python>=0.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
